--- a/ApplicationNotification/src/main/resources/application.properties
+++ b/ApplicationNotification/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:h2:tcp://localhost:9090/mem:notificationsdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type=ERROR
+server.error.whitelabel.enabled=false
 
