--- a/NotificationGateway/src/main/resources/application.properties
+++ b/NotificationGateway/src/main/resources/application.properties
@@ -5,7 +5,7 @@ email.from=mariam.machaallah@gmail.com
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=mariam.machaallah@gmail.com
-spring.mail.password=iszcrfbwasowzqzx
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
