refactoring with lint

--- a/ApplicationNotification/src/main/resources/application.properties
+++ b/ApplicationNotification/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.datasource.url=jdbc:h2:tcp://localhost:9090/mem:notificationsdb;DB_CLOSE_ON_EXIT=FALSE
+server.port=8080
+
+spring.datasource.url=jdbc:h2:mem:notificationsdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto=none
+
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type=ERROR
 server.error.whitelabel.enabled=false
 
+notification.preferences.url=http://localhost:8081/notification/preferences
+notification.gateway.url=http://localhost:8083/api/notifications/send
+notification.templates.url=http://localhost:8083/api/notifications/templates
