--- a/NotificationTemplateFormatter/src/main/resources/application.properties
+++ b/NotificationTemplateFormatter/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8082
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.context=DEBUG
+
+notification.template.path=C:\\Users\\MMACHALLAH\\Downloads\\notifapp\\NotificationTemplateFormatter\\src\\main\\resources\\templates\\email\\
