--- a/NotificationGateway/src/main/resources/application.properties
+++ b/NotificationGateway/src/main/resources/application.properties
@@ -1,14 +1,22 @@
+server.port=8083
+
 twilio.username=
 twilio.password=
 twilio.fromPhoneNumber=
+
 email.from=mariam.machaallah@gmail.com
-spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
 spring.mail.username=mariam.machaallah@gmail.com
-spring.mail.password=
-spring.mail.port=587
+spring.mail.password=ynsynsaza999darif999
+
+spring.mail.host=smtp.gmail.com
 spring.mail.protocol=smtp
+spring.mail.port=587
+
+spring.mail.default-encoding=UTF-8
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-server.port=8083
+
+
+
+
