--- a/NotificationPreferences/src/main/resources/application.properties
+++ b/NotificationPreferences/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+server.port=8081
+
 spring.datasource.url=jdbc:h2:mem:notificationsdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= none
-server.port=8081
+#spring.jpa.hibernate.ddl-auto=none
+
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type=ERROR
+server.error.whitelabel.enabled=false
