--- a/NotificationTemplateFormatter/pom.xml
+++ b/NotificationTemplateFormatter/pom.xml
@@ -40,6 +40,12 @@
 			<version>3.3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
