add postgres db

--- a/NotificationTemplateFormatter/pom.xml
+++ b/NotificationTemplateFormatter/pom.xml
@@ -22,6 +22,7 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!--swagger springfox-boot-starter version 3.0.0 -->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
