--- a/NotificationPreferences/src/main/resources/application.properties
+++ b/NotificationPreferences/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 server.port=8081
 
-spring.datasource.url=jdbc:h2:mem:notificationsdb;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.url=jdbc:postgresql://localhost:5454/notificationsdb
+spring.datasource.username=mimi
+spring.datasource.password=mimi
+
+spring.jpa.generate-ddl=true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
 
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type=ERROR
