--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,31 @@
 version: "3"
 services:
   postgres:
-    container_name: postgres
+    container_name: postgres0
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: mimi
+      POSTGRES_PASSWORD: mimi
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
     ports:
-      - "5555:5432"
+      - "5454:5432"
+    networks:
+      - postgres
+    restart: unless-stopped
+
+  pgadmin:
+    container_name: pgadmin0
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: mimi
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    ports:
+      - "5050:80"
     networks:
       - postgres
     restart: unless-stopped
